# StarStationFurlong

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  TODO.md
.github/workflows/: ci.yml  release.yml
AI NOTES/: STUDY-SystemRequirements v001.md
DEV/: EXAMPLES-CodeLinks.md  FUNCTION-ElementCode.md  IDEAS-CraftTree.md  IDEAS-GameTechnology.md  IDEAS-Gameplay.md  IDEAS-TechTree.md
brainstorming/: 01-Inspiration.md  angled-vestibules-octagon-plan.md  chia-authority-architecture.md  chia-ventures-shared-ownership.md  craps-chia-backend-plan.md  device-focus-and-storage-trunk-plan.md  edit-room-mode-plan.md  floorplan-grid-plan.md  games-plan.md  greenhouse-farming-plan.md  keyed-identity-contacts-plan.md  m345-v029-build-plan.md  m5-traffic-mesh-plan.md  module-transform-docking-adapters-plan.md  module-wallets-chia-funding-plan.md  phone-apps-breakdown.md  rectangular-rooms-plan.md  room-durability-plan.md  room-templates-plan.md  slice2-two-machine-test.md  spaceship-conversion-plan.md  transfer-offers-deeds-shares.md  unified-doorlayout-plan.md  v029-three-machine-test.md
brainstorming/AI BRAINSTORMING/: STUDY-Architecture v002.md  STUDY-Architecture v003.md  STUDY-Architecture v004.md  STUDY-Architecture v005.md  STUDY-Architecture v006.md  STUDY-Architecture v007.md
brainstorming/ART/AI ART/: AI ART PROMPTS - 20260617.txt
brainstorming/REVIEWS/: REVIEW-20260703-ArchitectureV003-GPT55.md  REVIEW-20260703-ArchitectureV003-Gemini31Pro.md  REVIEW-20260703-ArchitectureV003-Gemini35Flash.md  REVIEW-20260703-ArchitectureV004-GPT55.md  REVIEW-20260703-ArchitectureV004-Gemini31Pro.md  REVIEW-20260703-ArchitectureV004-Gemini35Flash.md  REVIEW-20260703-ArchitectureV004-Opus48.md  REVIEW-20260703-ArchitectureV005-GPT55.md  REVIEW-20260703-ArchitectureV005-Gemini31Pro.md  REVIEW-20260703-ArchitectureV005-Gemini35Flash.md  REVIEW-20260703-ArchitectureV005-Opus48.md  REVIEW-20260707-Cabal-DNS-Free-Discovery-Plan.md  REVIEW-20260707-P2P-Hole-Punching-v0.11.1.md  REVIEW-20260708-Invite-Link-Loopback-Cert-Mismatch.md  REVIEW-20260710-ChiaHub.md
docs/API/: 01-CodeReferences.md
docs/GDD/: 01-Concept-Story.md  02-Core-Gameplay.md  03-CraftSystem.md  README.md
docs/TDD/: 01-Architecture.md  BrowserSupportMatrix.md  README.md
prototypes/: README.md
prototypes/0.0.1-core-loop-demo/: README.md
prototypes/0.0.2-ortho-camera-demo/: README.md  index.html
prototypes/0.0.4-navigation-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.10.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.11.0-core-loop-demo/: package-lock.json  package.json
prototypes/0.11.0-core-loop-demo/ssf-p2p-node/: Cargo.toml
prototypes/0.11.0-core-loop-demo/ssf-p2p-node/src/: main.rs
prototypes/0.12.0-core-loop-demo/: package-lock.json  package.json
prototypes/0.13.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.14.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.15.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.16.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.17.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.18.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.18.0-core-loop-demo/ssf-p2p-node/: Cargo.toml
prototypes/0.18.0-core-loop-demo/ssf-p2p-node/src/: main.rs
prototypes/0.19.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.20.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.21.0-core-loop-demo/: README.md  package-lock.json  package.json
prototypes/0.22.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.23.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.24.0-core-loop-demo/: package-lock.json  package.json
prototypes/0.25.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.26.0-core-loop-demo/: package-lock.json  package.json
prototypes/0.27.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.28.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.29.0-core-loop-demo/: index.html  node_modules  package-lock.json  package.json  vite.config.ts
prototypes/0.29.0-core-loop-demo/src-tauri/: Cargo.toml  tauri.conf.json
prototypes/0.29.0-core-loop-demo/ssf-p2p-node/: .gitignore  Cargo.toml
prototypes/0.29.0-core-loop-demo/ssf-p2p-node/src/: chia_craps_fair.rs  chia_lane.rs  chia_publish.rs  chia_resolve.rs  chia_wallet.rs  main.rs
prototypes/0.5.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.6.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.7.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/0.8.0-core-loop-demo/: index.html  package-lock.json  package.json
prototypes/0.9.0-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/01-core-loop-demo/: README.md  index.html  package-lock.json  package.json
prototypes/02-ortho-camera-demo/: README.md  index.html  package.json
prototypes/03-character-model-demo/: README.md  index.html  package.json
prototypes/04-navigation-demo/: README.md
spikes/b1-five-crate-build/: Cargo.toml  README.md
spikes/b1-five-crate-build/src/: main.rs
spikes/b2-wt-certhash-dial/: Cargo.toml  README.md
spikes/b2-wt-certhash-dial/src/: main.rs
spikes/b2-wt-certhash-dial/static/: index.html
spikes/b3-roomlog-bakeoff/: Cargo.toml
spikes/b3-roomlog-bakeoff/src/: main.rs
spikes/b4-station-seals-v2/: Cargo.toml
spikes/b4-station-seals-v2/src/: main.rs
spikes/b5-yrs-yjs-conformance/: Cargo.toml  README.md
spikes/b5-yrs-yjs-conformance/src/: main.rs
spikes/b5-yrs-yjs-conformance/static/: index.html
spikes/b6-iroh-sovereignty-gate/: Cargo.toml  README.md
spikes/b6-iroh-sovereignty-gate/src/: main.rs
src/: README.md
(+320 files in other folders)
