[package]
name = "ssf-wt-spike"
version = "0.1.0"
edition = "2021"
publish = false
description = "Spike B-2: WebTransport certhash dial matrix & cert rotation"

[dependencies]
wtransport = { version = "0.6", features = ["quinn"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
axum = "0.7" # To serve the HTML page and the live fingerprint registry
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.13" # In case we want to customize ECDSA certificates
