[package]
name = "ssf-p2p-node"
version = "0.11.0"
edition = "2021"
publish = false
description = "Sovereign P2P Swarm Node & WebTransport Router (Phase 2 P2P Backbone)"

[dependencies]
# Standard sovereign realtime stack (v006 §12.1 pins)
wtransport = { version = "0.6", features = ["quinn"] }
# Compile iroh with default-features = false to prevent linking a excessive number of exported DLL symbols on Windows GNU, avoiding E0432 / export ordinal overflows
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
hex = "0.4"
yrs = { version = "0.27", features = ["sync"] }
blake3 = "1"
rand = "0.8"
